Render check email and sndfa response in HTML (#88)
Use multipart when send email about sndfa.


1.4.4

Add sndfa_endpoint protocol if not provided
Fix remove old extension when upgrading from and old version of RPM

1.4.3

Fix check configuration for smtp_tls, smtp_user and smtp_password as STMP server connection

1.4.2

Fix notification event callbacks for user spassword

1.4.1

Fix permission over 2FA controller to allow non admin

1.4.0

LDAP preconfiguration
Second Factor Authentication added through email

1.3.0

Return last login attempt time. [#50]
Set centos mirror to 7.3.1611 for docker image

1.2.1

Use mysql db port in docker postlauchconfig script
Allow mysql db port in docker arg --dbhost
Support for integrate with LDAP

1.2.0

Update Docker to use keystone liberty version

1.1.2

Fix prefix path about SCIM version to use by default


1.1.1

Extend get version string script


1.1.0

Set default blacklist user for spassword checks
Set current keystone dependencies for docker version


1.0.6

Extend compatiblity with keystone liberty version


1.0.0

Initial verion